--- a/Koombea.Mobile.Tests/Koombea.Mobile.Tests/UnitConverter.Mobile.Tests.csproj
+++ b/Koombea.Mobile.Tests/Koombea.Mobile.Tests/UnitConverter.Mobile.Tests.csproj
@@ -7,8 +7,9 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.3" />
-    <PackageReference Include="NUnit" Version="3.13.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
+    <PackageReference Include="SpecFlow.NUnit" Version="3.5.14" />
+    <PackageReference Include="SpecFlow.Tools.MsBuild.Generation" Version="3.5.14" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
   </ItemGroup>
 
